# dratos

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  DOC.md  README.md  __init__.py  example_workflow.py  meh.toml  next.config.js  outlinesDockerRun.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py  userstory.md  userstory2.md
.cursor/: mcp.json
.cursor/rules/: context7.mdc  global.mdc
.github/workflows/: ci.yml
agent_framework/: git_api.py
api/: __init__.py  main.py  run_vllm_deployment.py  session.py  session_manager.py
api/config/: __init__.py  config.py  config.yaml  settings.prod.yaml  settings.stg.yml
api/services/: chat_service.py  models_service.py  (+1 more)
beta/: __init__.py
docs/: DOC.md
dratos/: README.txt  __init__.py  setup.py  utils.py
examples/: Ollama.py  R1.py  RAG.py  ai_workflows.py  artifacts.py  artifacts_retrieval.py  classification.py  conftest.py  example_workflow.py  google_vertexai.py  litellm_example.py  llama_cpp_generation.py  makao.py  memory.py  multimodality.py  new_simple.py  observability.py  outlines.py  simple_generation.py  simple_stream.py  stream.1.py  stream.py  stream_partial_structured_output_streamlit.py  stream_response_in_streamlit.py  stream_structured_output_litellm.py  test.csv  test_completion_settings.py  test_dummy.py  test_enriched.csv  test_generation.1.py  test_generation.py  test_memory.py  test_structured_generation.py  test_tools.py  test_vision.py  vllm_generation.py
experimental/: 3dUI.html
help/: deltacat_examples.md
memento-cli/: main.py
studio/: __init__.py  session_manager.py
test_server/: server.py  shared_env.json  test_data.json
tests/: generate_uml_diagram.py  test_data_object.py
(+268 files in other folders)
