[tool.poetry]
name = "dratos"
version = "0.3.8"
description = ""
authors = ["Nicolas Nahas <45595586+nicorne@users.noreply.github.com>"]
license = "GNU"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.9.2"

[tool.poetry.group.optional.dependencies]
openai = "1.55.3"
google-genai = "1.2.0"

[tool.poetry.group.dev.dependencies]
tiktoken = "^0.8.0"
rich = "^13.9.3"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
flask = "^3.0.3"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
